fix add item in mobile

--- a/app/views/factory/in/carts/_actions.html.erb
+++ b/app/views/factory/in/carts/_actions.html.erb
@@ -1,8 +1,8 @@
 <%= link_to({ controller: 'productions', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-regular fa-hand"></i>
+  <i class="fa-solid fa-hand"></i>
   <span>自己点餐</span>
 <% end %>
 <%= link_to({ controller: 'carts', action: 'list', scene_id: params[:scene_id], produce_on: params[:produce_on] }, class: 'weui-actionsheet__cell weui-actionsheet__cell_warn') do %>
-  <i class="fa-regular fa-hand-holding"></i>
+  <i class="fa-solid fa-hand-holding"></i>
   <span>帮同事点餐</span>
 <% end %>
