--- a/app/views/factory/in/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_tab_bar_cart.html.erb
@@ -1,17 +1,17 @@
-<div class="level is-flex mb-0 py-2 has-background-white has-border-top">
+<div class="level is-flex mb-0 py-2 has-border-top">
   <div class="level-left is-flex pl-4">
-    <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'level-item mb-0') do %>
-      <i class="fa-solid fa-bag-shopping fa-2x">
-        <span class="weui-badge"><%= current_cart_count %></span>
+    <%= link_to({ controller: 'carts', action: 'show', id: @cart.id }, class: 'level-item mb-0') do %>
+      <i class="fa-solid fa-bag-shopping fa-2x fa-weui-badge">
+        <span class="weui-badge"><%= @cart.items.count %></span>
       </i>
     <% end %>
     <div class="level-item pl-4 is-align-items-baseline">
-      <%= current_cart.amount.to_money.format.html_safe %>
+      <%= @cart.item_amount.to_money.format.html_safe %>
     </div>
   </div>
   <div class="level-right mt-0 pr-4">
     <div class="level-item">
-      <%= link_to({ controller: 'trade/me/carts', action: 'show', return_to: url_for(**params.permit!.slice(:product_taxon_id)) }, class: 'weui-btn weui-btn_mini weui-btn_primary') do %>
+      <%= link_to({ controller: 'carts', action: 'show', id: @cart.id, **params.permit(:factory_taxon_id) }, state: 'enter', class: 'button is-small is-primary') do %>
         <span>去购物车</span>
         <i class="fa-solid fa-angle-right"></i>
       <% end %>
