--- a/app/views/factory/in/carts/_base/_scene.html.erb
+++ b/app/views/factory/in/carts/_base/_scene.html.erb
@@ -18,9 +18,9 @@
       <time><%= scene.deliver_finish_at.to_fs(:time) %></time>
     </p>
   </div>
-  <div class="weui-media-box__ft pr-2">
-    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_primary', disabled: !scene.bookable?(produce_on)) do %>
-      <span>点餐</span>
+  <div class="weui-media-box__ft pr-4">
+    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'button is-small is-primary', disabled: !scene.bookable?(produce_on)) do %>
+      <span>下单</span>
     <% end %>
   </div>
 </div>
