--- a/app/views/factory/in/carts/_show/_organ.html.erb
+++ b/app/views/factory/in/carts/_show/_organ.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-image">
     <figure class="image is-1by1">
-      <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'image' if organ.logo.attached? %>
+      <%= image_tag organ.logo, class: 'image' if organ.logo.attached? %>
     </figure>
   </div>
   <div class="card-content">
