--- a/app/views/factory/admin/factory_taxons/_import/_breadcrumb.html.erb
+++ b/app/views/factory/admin/factory_taxons/_import/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory_taxons' } %></li>
+    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
     <li><span class="px-3"><%= @factory_taxon.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
