--- a/app/views/factory/admin/factory_taxons/import.html.erb
+++ b/app/views/factory/admin/factory_taxons/import.html.erb
@@ -1,3 +1,5 @@
+<%= render 'filter_form' %>
+
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
 <% end %>
