--- a/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td rowspan="<%= size %>">
     <span><%= taxon.name %></span>
-    <%= link_to({ controller: 'product_taxons', action: 'import', id: taxon.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
+    <%= link_to({ controller: 'factory_taxons', action: 'import', id: taxon.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
       <i class="fa-solid fa-sign-in-alt"></i>
     <% end %>
   </td>
