--- a/app/views/factory/admin/product_taxons/_import/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_taxons/_import/_breadcrumb.html.erb
@@ -1,7 +1,7 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-    <li><span class="px-3"><%= @factory_taxon.name %></span></li>
+    <li><span class="px-3"><%= @product_taxon.factory_taxon.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
