--- a/app/views/factory/admin/product_taxons/_index/_factory_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_factory_tr.html.erb
@@ -2,11 +2,8 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'import', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-sign-in-alt"></i>
-      <% end %>
-      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-circle-info"></i>
+      <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-plus has-text-primary"></i>
       <% end %>
     </div>
   </td>
