--- a/app/views/factory/admin/trade_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/trade_items/_index/_index_thead.html.erb
@@ -1,5 +1,5 @@
-<th><%= Trade::TradeItem.human_attribute_name(:number) %></th>
-<th><%= Trade::TradeItem.human_attribute_name(:amount) %></th>
-<th><%= Trade::TradeItem.human_attribute_name(:note) %></th>
-<th><%= Trade::TradeItem.human_attribute_name(:extra) %></th>
-<th><%= Trade::TradeItem.human_attribute_name(:status) %></th>
+<th><%= Trade::Item.human_attribute_name(:number) %></th>
+<th><%= Trade::Item.human_attribute_name(:amount) %></th>
+<th><%= Trade::Item.human_attribute_name(:note) %></th>
+<th><%= Trade::Item.human_attribute_name(:extra) %></th>
+<th><%= Trade::Item.human_attribute_name(:status) %></th>
