--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
@@ -11,7 +11,7 @@
     <i class="fa-solid fa-cubes has-text-success"></i>
     <span class="pl-1"><%= model.products_count %></span>
   <% end %>
-  <%= link_to({ controller: 'product_taxons', action: 'import', id: model.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
+  <%= link_to({ controller: 'in/product_taxons', action: 'import', id: model.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
     <i class="fa-solid fa-sign-in-alt"></i>
   <% end %>
 </td>
