--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
@@ -14,6 +14,9 @@
   <%= link_to({ controller: 'in/product_taxons', action: 'import', id: model.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
     <i class="fa-solid fa-sign-in-alt"></i>
   <% end %>
+  <%= link_to({ controller: 'in/provides', product_taxon_id: model.id }, aria: { label: t('factory.in.provides.index.title') }) do %>
+    <i class="fa-solid fa-building"></i>
+  <% end %>
 </td>
 <th>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
