--- a/app/views/factory/in/provides/_index/_provider_tbody.html.erb
+++ b/app/views/factory/in/provides/_index/_provider_tbody.html.erb
@@ -4,3 +4,9 @@
     <span><%= model.name %></span>
   </div>
 </td>
+<td>
+  <%= button_to({ action: 'add', provider_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fa-solid fa-plus has-text-success"></i>
+    <span class="pl-1"><%= t('factory.in.provides.add.title') %></span>
+  <% end %>
+</td>
