--- a/app/views/factory/in/provides/index.html.erb
+++ b/app/views/factory/in/provides/index.html.erb
@@ -2,5 +2,5 @@
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @provides, as: :model %>
-  <%= render partial: 'provider_tbody', layout: 'index_tr', collection: @providers, as: :model %>
+  <%= render partial: 'provider_tbody', layout: 'provider_tr', collection: @providers, as: :model %>
 <% end %>
