--- a/app/views/factory/in/provides/_base/_breadcrumb.html.erb
+++ b/app/views/factory/in/provides/_base/_breadcrumb.html.erb
@@ -1,7 +1,10 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-    <li><span class="px-3"><%= @product_taxon.name %></span></li>
+    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'admin/product_taxons' } %></li>
+    <li>
+      <span class="pl-3"><%= @product_taxon.name %></span>
+      <span class="pr-3 has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
+    </li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
