--- a/app/views/factory/in/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/in/product_taxons/_base/_production.html.erb
@@ -1,7 +1,6 @@
-<tr id="tr_<%= @product_taxon.id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= params[:product_id] %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
-    <div class="is-several">
-      <span style="width: 1em; display: inline-block"></span>
+    <div class="is-several pl-6">
       <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
       <span><%= model.name %></span>
     </div>
@@ -20,7 +19,7 @@
     <% downstream_production = model.downstreams.default_where(default_params).take %>
     <% if downstream_production %>
       <i class="fa-solid fa-check has-text-success"></i>
-      <%= button_to({ controller: 'admin/productions', action: 'destroy', product_id: downstream_production.product_id, id: downstream_production.id }, method: :delete, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'admin/productions', action: 'destroy', product_id: downstream_production.product_id, id: downstream_production.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-times has-text-danger"></i>
       <% end %>
     <% else %>
