--- a/app/views/factory/in/product_taxons/prune.turbo_stream.erb
+++ b/app/views/factory/in/product_taxons/prune.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.replace "tr_#{params[:product_id]}_#{@production.id}", partial: 'production', locals: { model: @production } %>
+<%= turbo_stream.replace "tr_#{@product.upstream_id}_#{@production.upstream_id}", partial: 'production', locals: { model: @production.upstream } %>
