--- a/app/views/factory/in/product_taxons/_import/_breadcrumb.html.erb
+++ b/app/views/factory/in/product_taxons/_import/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
+    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'admin/product_taxons', anchor: "tr_#{@product_taxon.id}" } %></li>
     <li><span class="px-3"><%= @product_taxon.factory_taxon.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
