--- a/app/views/factory/in/product_taxons/_import/_index_tbody.html.erb
+++ b/app/views/factory/in/product_taxons/_import/_index_tbody.html.erb
@@ -3,7 +3,7 @@
     <%= button_to({ action: 'productions', product_id: model.id }) do %>
       <i class="fa-solid fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree-remote#expand"></i>
     <% end %>
-    <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
+    <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
     <span><%= model.name %></span>
     <span class="tag"><%= model.productions_count %></span>
   </div>
@@ -14,16 +14,15 @@
   <% model.parts.each do |part| %>
     <tr>
       <td><span class="tag"><%= link_to part.name, { controller: 'products', action: 'show', id: part.id } %></span></td>
-      <td><%# part.price %></td>
     </tr>
   <% end %>
   </table>
 </td>
 <td>
   <% if @select_ids.include?(model.id) %>
-    <i class="fa-regular fa-check has-text-success"></i>
+    <i class="fa-solid fa-check has-text-success"></i>
   <% else %>
-    <i class="fa-regular fa-times has-text-gery"></i>
+    <i class="fa-solid fa-times has-text-gery"></i>
   <% end %>
 </td>
 <td>
