--- a/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
@@ -1,9 +1,12 @@
-<td><%= model.part_taxon.name %></td>
+<td>
+  <span><%= model.name %></span>
+  <span class="tag"><%= model.part_taxon.name %></span>
+</td>
 <td>
   <p><%= model.min_select %></p>
   <p><%= model.max_select %></p>
 </td>
-<td><%= model.select_str %></td>
+<td class="has-text-grey"><%= model.select_str %></td>
 <td><%= model.product_parts_count %></td>
 <td>
   <%= render partial: 'part_form', locals: { product_part_taxon: model } %>
