--- a/app/views/factory/in/home/_cart_item.html.erb
+++ b/app/views/factory/in/home/_cart_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to({ controller: 'trade/our/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
-    <i class="fa-regular fa-tags fa-fw has-text-primary"></i>
+    <i class="fa-solid fa-fw fa-tags has-text-primary"></i>
     <span><%= t('trade.our.promote_goods.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
@@ -14,7 +14,7 @@
 <% else %>
 <%= link_to @url, class: 'weui-cell weui-cell_access' do %>
   <div class="weui-cell__bd">
-    <i class="fa-brands fa-weixin fa-fw has-text-primary"></i>
+    <i class="fa-brands fa-fw fa-weixin has-text-primary"></i>
     <span>绑定微信</span>
   </div>
   <div class="weui-cell__ft"></div>
