--- a/app/views/factory/in/home/index.html+phone.erb
+++ b/app/views/factory/in/home/index.html+phone.erb
@@ -1,20 +1,6 @@
 <div class="weui-panel">
   <div class="weui-panel__bd">
-    <div class="weui-media-box weui-media-box_appmsg">
-      <div class="weui-media-box__hd">
-        <div class="is-avatar">
-          <div class="text">一</div>
-        </div>
-      </div>
-      <div class="weui-media-box__bd">
-        <% if request.variant.any?(:work_wechat) %>
-          <ww-open-data type="userName" openid="<%= current_corp_user&.user_id %>"></ww-open-data>
-        <% else %>
-          <p><%= current_member.name %></p>
-        <% end %>
-        <p class="has-text-grey"><%= current_organ.name %></p>
-      </div>
-    </div>
+    <%= render 'corp_profile_item' %>
   </div>
 </div>
 
