--- a/app/views/factory/admin/produce_plans/_products/_filter_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_filter_table.html.erb
@@ -2,9 +2,9 @@
   <tr>
     <th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
     <td>
-      <%= link_to t('.all'), filter_params(except: [:product_taxon_id]), class: active_params(product_taxon_id: '', active: 'button is-info', item: 'button is-light') %>
+      <%= link_to t('.all'), filter_params(except: [:product_taxon_id]), class: active_helper(product_taxon_id: '', active: 'button is-info', item: 'button is-light') %>
       <% @product_taxons.each do |product_taxon| %>
-        <%= link_to product_taxon.name, filter_params(product_taxon_id: product_taxon.id, except: [:id]), class: active_params(product_taxon_id: product_taxon.id, active: 'button is-info', item: 'button is-light') %>
+        <%= link_to product_taxon.name, filter_params(product_taxon_id: product_taxon.id, except: [:id]), class: active_helper(product_taxon_id: product_taxon.id, active: 'button is-info', item: 'button is-light') %>
       <% end %>
     </td>
   </tr>
