--- a/app/views/factory/in/product_taxons/_import/_filter_table.html.erb
+++ b/app/views/factory/in/product_taxons/_import/_filter_table.html.erb
@@ -2,9 +2,9 @@
   <tr>
     <th><%= Factory::Product.human_attribute_name(:organ_id) %></th>
     <td>
-      <%= link_to t('.all'), filter_params(except: [:organ_id]), class: active_params(organ_id: '', active: 'button is-info', item: 'button is-light') %>
+      <%= link_to t('.all'), filter_params(except: [:organ_id]), class: active_helper(organ_id: '', active: 'button is-info', item: 'button is-light') %>
       <% current_organ.providers.each do |provider| %>
-        <%= link_to provider.name, filter_params(organ_id: provider.id, except: [:id]), class: active_params(organ_id: provider.id, active: 'button is-info', item: 'button is-light') %>
+        <%= link_to provider.name, filter_params(organ_id: provider.id, except: [:id]), class: active_helper(organ_id: provider.id, active: 'button is-info', item: 'button is-light') %>
       <% end %>
     </td>
   </tr>
