--- a/app/views/factory/in/carts/list.html+phone.erb
+++ b/app/views/factory/in/carts/list.html+phone.erb
@@ -1,4 +1,4 @@
-<%= render 'produce_on_bar' %>
+<%# render 'produce_on_bar' %>
 
 <div class="weui-panel">
   <div class="weui-panel__bd">
@@ -23,4 +23,4 @@
 </div>
 <% end %>
 
-<%= render 'taxon' %>
+<%# render 'taxon' %>
