--- a/app/views/factory/in/carts/_list/_trade_item.html.erb
+++ b/app/views/factory/in/carts/_list/_trade_item.html.erb
@@ -1,5 +1,5 @@
 <div class="level-left is-flex">
-  <%= form_with theme: nil, model: trade_item, url: { controller: 'trade_items', action: 'toggle', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline level-item mb-0' do |f| %>
+  <%= form_with theme: nil, model: trade_item, url: { controller: 'trade/in/items', action: 'update', id: trade_item.id }, data: { controller: 'input' }, class: 'is-inline level-item mb-0' do |f| %>
     <%= f.check_box :status, { checked: trade_item.status_checked?, data: { action: 'click->input#form' }, id: nil }, trade_item.id %>
   <% end %>
   <div class="level-item ml-2">
