--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -1,5 +1,5 @@
 <div class="weui-media-box weui-media-box_appmsg" data-controller="common" id="production_<%= model.id %>">
-  <%= link_to({ controller: '/factory/productions', action: 'dialog', id: model.id }, text: true, data: { method: 'put', action: 'common#link' }, class: 'weui-media-box__hd') do %>
+  <%= link_to({ controller: '/factory/productions', action: 'dialog', id: model.id }, text: true, data: { controller: 'empty', method: 'put', action: 'common#link' }, class: 'weui-media-box__hd') do %>
     <%= image_tag model.product.logo, class: 'weui-media-box__thumb' if model.product.logo.attached? %>
   <% end %>
   <div class="weui-media-box__bd is-flex is-flex-direction-column">
