--- a/app/views/factory/productions/expired.html.erb
+++ b/app/views/factory/productions/expired.html.erb
@@ -2,7 +2,7 @@
   <%= render 'produce_on_bar' %>
 <% end %>
 
-<div class="has-text-centered">
+<div class="is-middle is-flex-grow-1">
   <span>已经超过下单时间了，请切换其他时间段</span>
 </div>
 
