--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -1,7 +1,7 @@
 <%= render 'produce_on_bar' if params[:produce_on] && params[:scene_id] %>
 
 <div class="box is-radiusless">
-  <i class="fa-solid fa-location-dot"></i>
+  <i class="fa-solid fa-location-dot has-text-grey"></i>
   <span><%= current_organ.address_detail %></span>
 </div>
 
