--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -29,6 +29,7 @@
   <%= f.hidden_field :fetch_oneself, value: params[:fetch_oneself] %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
+  <%= f.hidden_field :desk_id, value: params[:desk_id] %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
   <% end %>
