--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -2,7 +2,7 @@
 
 <div class="box is-radiusless">
   <i class="fa-solid fa-location-dot has-text-grey"></i>
-  <span><%= current_organ.address_detail %></span>
+  <span class="pl-1"><%= current_organ.address_detail %></span>
 </div>
 
 <div class="weui-flex is-align-items-flex-start is-flex-grow-1">
