--- a/app/views/factory/productions/_index/_menu.html.erb
+++ b/app/views/factory/productions/_index/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="columns is-variable m-0 is-flex is-flex-direction-column is-sticky" style="top: 38px">
 <% @product_taxons.each do |product_taxon| %>
-  <%= link_to({ controller: 'productions', product_taxon_id: product_taxon.id }, class: active_helper(product_taxon_id: product_taxon.id, item: 'column is-primary px-2', active: 'column is-primary px-2 has-background-white')) do %>
+  <%= link_to({ controller: 'productions', product_taxon_id: product_taxon.id, **params.permit(:station_id, :desk_id) }, class: active_helper(product_taxon_id: product_taxon.id, item: 'column is-primary px-2', active: 'column is-primary px-2 has-background-white')) do %>
     <div class="weui-grid__icon"><%= image_tag product_taxon.logo if product_taxon.logo.attached? %></div>
     <p class="weui-grid__label <%= active_helper(product_taxon_id: product_taxon.id, active: 'has-text-success') %>"><%= product_taxon.name %></p>
   <% end %>
