--- a/app/views/factory/admin/home/_index_item.html.erb
+++ b/app/views/factory/admin/home/_index_item.html.erb
@@ -1,7 +1,7 @@
-<%= link_to({ controller: 'factory/admin/products' }, class: 'weui-cell weui-cell_access') do %>
+<%= link_to({ controller: 'factory/admin/product_taxons' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
     <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
-    <span><%= t('factory.admin.products.index.title') %></span>
+    <span><%= t('factory.admin.product_taxons.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
 <% end %>
