--- a/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_index/_taxon_tbody.html+phone.erb
@@ -2,8 +2,8 @@
   <div class="weui-media-box__bd">
     <span><%= taxon.name %></span>
   </div>
-  <div class="weui-media-box__ft">
-    <%= link_to({ action: 'new', factory_taxon_id: taxon.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, class: 'button is-small is-rounded is-light') do %>
+  <div class="weui-media-box__ft pr-2">
+    <%= link_to({ action: 'new', factory_taxon_id: taxon.id }, data: { turbo_scroll: true }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-plus has-text-link"></i>
       <span class="pl-1"><%= t('.new') %></span>
     <% end %>
