--- a/app/views/factory/admin/products/index.html+phone.erb
+++ b/app/views/factory/admin/products/index.html+phone.erb
@@ -1,3 +1,5 @@
+<%= render 'top_bar' %>
+
 <%= render layout: 'index_table' do %>
   <% @products.group_by(&:product_taxon).each do |taxon, products| %>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model %>
