--- a/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
@@ -1,3 +1,3 @@
-<strong class="weui-media-box__title"><%= link_to model.name, { action: 'show', id: model.id }, text: true %></strong>
+<strong class="weui-media-box__title"><%= link_to model.name, { controller: 'productions', product_id: model.id }, text: true %></strong>
 <p class="weui-media-box__desc"><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></p>
 <p class="weui-media-box__desc"><%= model.qr_prefix %></p>
