--- a/app/views/factory/admin/product_taxons/_index/_factory_tr.html+phone.erb
+++ b/app/views/factory/admin/product_taxons/_index/_factory_tr.html+phone.erb
@@ -3,8 +3,9 @@
     <%= yield %>
   </div>
   <div class="weui-media-box__ft">
-    <%= button_to({ action: 'actions', id: model.id }, class: 'button is-borderless') do %>
-      <i class="fa-solid fa-lg fa-ellipsis-h"></i>
+    <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_scroll: true }, class: 'button is-small is-rounded is-light') do %>
+      <i class="fa-solid fa-plus has-text-link"></i>
+      <span class="pl-1"><%= t('.new') %></span>
     <% end %>
   </div>
 </div>
