--- a/app/views/me/_factory_nav.html+phone.erb
+++ b/app/views/me/_factory_nav.html+phone.erb
@@ -17,6 +17,12 @@
         </div>
         <div class="has-text-dark"><%= t('factory.admin.scenes.index.title') %></div>
       <% end %>
+      <%= link_to({ controller: 'factory/admin/brands' }, class: 'column has-block-centered') do %>
+        <div class="has-text-grey-dark">
+          <i class="fa-solid fa-fw fa-xl fa-copyright"></i>
+        </div>
+        <div class="has-text-dark"><%= t('factory.admin.brands.index.title') %></div>
+      <% end %>
     </div>
   </div>
 </div>
