--- a/app/views/factory/admin/production_plans/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_tbody.html+phone.erb
@@ -1,4 +1,4 @@
-<p class="weui-media-box__desc"><%= model.scene&.title %></p>
+<p><%= model.scene&.title %></p>
 <p class="weui-media-box__desc"><%= model.produce_on %></p>
 <p class="weui-media-box__desc"><time data-controller="time"><%= model.start_at&.to_fs(:iso8601) %></time></p>
 <p class="weui-media-box__desc"><time data-controller="time"><%= model.finish_at&.to_fs(:iso8601) %></time></p>
