--- a/app/views/factory/admin/production_items/_index/_button.html+phone.erb
+++ b/app/views/factory/admin/production_items/_index/_button.html+phone.erb
@@ -1,5 +1,5 @@
 <%= form_with theme: nil, model: @production_item, url: { action: 'create' }, class: 'weui-btn_cell weui-btn_cell-primary is-bordered' do |f| %>
-  <%= f.hidden_field :qr_code %>
+  <%= f.hidden_field :code %>
   <%= f.hidden_field :produced_at, value: Time.current.to_s(:local) %>
   <%= f.submit '新增' %>
 <% end %>
