--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -1,7 +1,9 @@
-<%= render 'produce_on_bar' if params[:produce_on] && params[:scene_id] %>
-
+<% if params[:produce_on] && params[:scene_id] %>
+  <%= render 'produce_on_bar' %>
+<% end %>
 <%= render 'station' if params[:station_id].present? || params[:desk_id].present? %>
 
+<%= render 'filter_form' %>
 <div class="weui-flex is-align-items-flex-start is-flex-grow-1">
   <%= render 'menu' unless @produce_plan %>
   <div
