--- a/app/views/factory/productions/_index/_paginator.html.erb
+++ b/app/views/factory/productions/_index/_paginator.html.erb
@@ -1,1 +1,6 @@
-<div data-page-target="paging" data-total="<%= @productions.total_pages %>" data-page="<%= @productions.current_page %>"></div>
+<div
+  data-page-target="paging"
+  data-total="<%= @productions.total_pages %>"
+  data-page="<%= @productions.current_page %>"
+>
+</div>
