--- a/app/views/me/_factory_nav.html+phone.erb
+++ b/app/views/me/_factory_nav.html+phone.erb
@@ -1,7 +1,13 @@
 <div class="weui-panel" data-controller="empty">
-  <div class="weui-panel__hd">
-    <i class="fa-solid fa-fw fa-store"></i>
-    <span><%= t('factory.admin.title') %></span>
+  <div class="weui-panel__hd is-flex is-justify-content-space-between">
+    <div>
+      <i class="fa-solid fa-fw fa-store"></i>
+      <span><%= t('factory.admin.title') %></span>
+    </div>
+    <%= link_to({ controller: '/factory/productions' }, target: '_blank') do %>
+      <i class="fa-solid fa-up-right-and-down-left-from-center"></i>
+      <span>预览商店</span>
+    <% end %>
   </div>
   <div class="weui-panel__bd">
     <div class="columns is-4-mobile is-flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
