--- a/app/views/factory/in/carts/_index/_organ.html.erb
+++ b/app/views/factory/in/carts/_index/_organ.html.erb
@@ -1,5 +1,5 @@
 <div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__hd">
+  <div data-controller="empty" class="weui-media-box__hd">
     <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if organ.logo.attached? %>
   </div>
   <div class="weui-media-box__bd">
