--- a/app/views/factory/in/carts/_index/_organ.html.erb
+++ b/app/views/factory/in/carts/_index/_organ.html.erb
@@ -1,10 +1,10 @@
 <div class="weui-media-box weui-media-box_appmsg">
   <div data-controller="empty" class="weui-media-box__hd">
-    <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if organ.logo.attached? %>
+    <%= image_tag provider[0].logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if provider[0].logo.attached? %>
   </div>
   <div class="weui-media-box__bd">
-    <strong class="weui-media-box__title"><%= organ.name %></strong>
-    <p><%= organ.address %></p>
+    <strong class="weui-media-box__title"><%= provider[0].name %></strong>
+    <p><%= provider[0].address %></p>
     <p></p>
   </div>
 </div>
