--- a/app/views/factory/in/produce_plans/index.html+phone.erb
+++ b/app/views/factory/in/produce_plans/index.html+phone.erb
@@ -6,7 +6,7 @@
     <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on.to_fs(:week) %></span>
   </div>
   <div class="weui-panel__bd">
-    <div class="columns is-multiline is-flex m-0 p-4">
+    <div class="columns is-multiline is-flex m-0">
       <%= render partial: 'produce_plan', collection: produce_plans, as: :model %>
     </div>
   </div>
