--- a/app/views/factory/in/home/_cart_item.html.erb
+++ b/app/views/factory/in/home/_cart_item.html.erb
@@ -1,22 +1,7 @@
 <%= link_to({ controller: 'trade/our/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
     <i class="fa-solid fa-fw fa-tags has-text-primary"></i>
-    <span><%= t('trade.our.promote_goods.index.title') %></span>
+    <span><%= t('trade.in.promote_goods.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
-<% end %>
-<% if @wechat_user %>
-<div class="weui-cell weui-cell_access">
-  <div class="weui-cell__bd">
-    <%= @wechat_user.name %>
-  </div>
-</div>
-<% else %>
-<%= link_to @url, class: 'weui-cell weui-cell_access' do %>
-  <div class="weui-cell__bd">
-    <i class="fa-brands fa-fw fa-weixin has-text-primary"></i>
-    <span>绑定微信</span>
-  </div>
-  <div class="weui-cell__ft"></div>
-<% end %>
 <% end %>
