add data controller

--- a/app/views/factory/in/carts/_list/_index_tr.html+phone.erb
+++ b/app/views/factory/in/carts/_list/_index_tr.html+phone.erb
@@ -1,5 +1,5 @@
 <div class="weui-media-box weui-media-box_appmsg">
-  <div class="weui-media-box__bd">
+  <div data-controller="open-data" class="weui-media-box__bd">
     <%= yield %>
   </div>
   <div class="weui-media-box__ft"></div>
