rename trade item to item

--- a/app/views/factory/in/carts/_list/_add_cart.html.erb
+++ b/app/views/factory/in/carts/_list/_add_cart.html.erb
@@ -1,9 +1,10 @@
-<%= form_with theme: nil, url: { controller: 'items', action: 'create' }, class: 'button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= f.hidden_field :member_id, value: member.id %>
+  <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
