--- a/app/views/factory/in/carts/_list/_production.html.erb
+++ b/app/views/factory/in/carts/_list/_production.html.erb
@@ -30,7 +30,7 @@
   </div>
   <div class="weui-media-box__ft">
     <%= button_to({ controller: 'productions', action: 'list', **params.permit(:produce_on, :scene_id) }, class: 'button is-borderless') do %>
-      <i class="fa-regular fa-repeat fa-lg"></i>
+      <i class="fa-solid fa-lg fa-repeat"></i>
     <% end %>
   </div>
 </div>
