--- a/app/views/factory/in/carts/_list/_index_tbody.html+phone.erb
+++ b/app/views/factory/in/carts/_list/_index_tbody.html+phone.erb
@@ -12,9 +12,9 @@
     </div>
   </div>
   <div class="level-right mt-0">
-    <%= render partial: 'add_cart', locals: { model: @production, member: model, trade_item: model.items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) } if @production %>
+    <%= render partial: 'add_cart', locals: { model: @production, member: model, item: model.items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) } if @production %>
   </div>
 </div>
 <div class="level is-flex">
-  <%= render partial: 'trade_item', collection: @items.select(&->(i){ i.member_id == model.id }), as: :trade_item %>
+  <%= render partial: 'trade_item', collection: @items.select(&->(i){ i.member_id == model.id }), as: :item %>
 </div>
