--- a/app/views/factory/in/carts/_list/_index_tfoot.html+phone.erb
+++ b/app/views/factory/in/carts/_list/_index_tfoot.html+phone.erb
@@ -1,11 +1,8 @@
 <div class="weui-panel">
   <div class="weui-panel__bd" data-controller="check" data-check-name-value="trade_item[status]">
-    <%= form_with theme: nil, url: { controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button_to' do |f| %>
-      <%= f.hidden_field :ids, data: { check_target: 'ids' } %>
-      <%= button_tag data: { action: 'check#doSubmit' }, class: 'weui-btn_cell weui-btn_cell-warn py-4' do %>
-        <i class="fa-regular fa-credit-card"></i>
-        <span class="pl-1"><%= t('.pay') %></span>
-      <% end %>
+    <%= link_to({ controller: 'trade/in/orders', action: 'cart', current_cart_id: @cart.id }, state: 'enter', class: 'weui-btn_cell weui-btn_cell-warn py-4') do %>
+      <i class="fa-solid fa-credit-card"></i>
+      <span class="pl-1"><%= t('.pay') %></span>
     <% end %>
   </div>
 </div>
