--- a/app/views/factory/productions/index.html.erb
+++ b/app/views/factory/productions/index.html.erb
@@ -1,4 +1,4 @@
-<%# render 'breadcrumb' %>
+<%= render 'breadcrumb' %>
 <div class="cards">
 <% @productions.each do |production| %>
   <div class="card">
