--- a/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
@@ -4,6 +4,7 @@
     <span><%= model.name %></span>
   </div>
 </td>
+<td><%= model.scene&.title %></td>
 <td>
   <%= link_to({ controller: 'factory_providers', factory_taxon_id: model.id }, aria: { label: t('factory.panel.factory_providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-industry has-text-info"></i>
