--- a/app/views/factory/panel/factory_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index/_index_thead.html.erb
@@ -1,2 +1,3 @@
 <th><%= Factory::FactoryTaxon.human_attribute_name(:name) %></th>
+<th><%= Factory::FactoryTaxon.human_attribute_name(:scene_id) %></th>
 <th></th>
