--- a/app/views/my/_factory_nav.html.erb
+++ b/app/views/my/_factory_nav.html.erb
@@ -2,8 +2,8 @@
   <div class="item">
     <span class="header">接项目</span>
     <div class="menu">
-      <%= link_to '服务商申请', my_provider_path, class: active_helper(controllers: ['providers'], active: 'is-active') %>
-      <%= link_to '服务管理', my_good_providers_path, class: active_helper(controllers: ['good_providers'], active: 'is-active') %>
+      <%# link_to '服务商申请', my_provider_path, class: active_helper(controllers: ['providers'], active: 'is-active') %>
+      <%# link_to '服务管理', my_good_providers_path, class: active_helper(controllers: ['good_providers'], active: 'is-active') %>
     </div>
   </div>
 </div>
