--- a/app/views/factory/in/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, data: { turbo_frame: 'modal' }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-primary"></i>
       <% end %>
     </div>
