--- a/app/views/factory/in/carts/_base/_scene.html.erb
+++ b/app/views/factory/in/carts/_base/_scene.html.erb
@@ -19,7 +19,7 @@
     </p>
   </div>
   <div class="weui-media-box__ft pr-4">
-    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'button is-small is-primary', disabled: !scene.bookable?(produce_on)) do %>
+    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'button is-large is-primary', disabled: !scene.bookable?(produce_on)) do %>
       <span>下单</span>
     <% end %>
   </div>
