show both factory taxon & product taxon

--- a/app/views/factory/admin/products/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/products/_index/_breadcrumb.html.erb
@@ -1,7 +1,12 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons', anchor: "tr_#{@product_taxon.id}" } %></li>
-    <li><span class="px-3"><%= @product_taxon.name %></span></li>
+    <li>
+      <div class="px-3">
+        <span><%= @product_taxon.name %></span>
+        <span class="has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
+      </div>
+    </li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
