--- a/app/views/factory/in/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/in/product_taxons/_base/_production.html.erb
@@ -1,6 +1,7 @@
 <tr id="tr_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
-    <div class="is-several pl-6">
+    <div class="is-several pl-2">
+      <i class="fa-solid fa-fw"></i>
       <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
       <span><%= model.name %></span>
     </div>
@@ -16,10 +17,9 @@
     </table>
   </td>
   <td>
-    <% downstream_production = model.downstreams.default_where(default_params).take %>
-    <% if downstream_production %>
+    <% if @imported_production_ids.include?(model.id) %>
       <i class="fa-solid fa-check has-text-success"></i>
-      <%= button_to({ action: 'prune', production_id: downstream_production.id }, method: :delete, aria: { label: t('factory.in.product_taxons.prune.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'prune', production_id: model.id }, method: :delete, aria: { label: t('factory.in.product_taxons.prune.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-times has-text-danger"></i>
       <% end %>
     <% else %>
