--- a/app/views/factory/in/product_taxons/copy.turbo_stream.erb
+++ b/app/views/factory/in/product_taxons/copy.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.replace "tr_#{params[:product_id]}_#{@production.id}", partial: 'production', locals: { model: @production } %>
+<%= turbo_stream.append 'body', partial: 'visit' %>
